fix icon label alignment in new button

--- a/src/app/core/entity-components/entity-list/entity-list.component.scss
+++ b/src/app/core/entity-components/entity-list/entity-list.component.scss
@@ -13,3 +13,7 @@
     max-width: 412px;
   }
 }
+
+.standard-add-button-icon {
+  vertical-align: inherit;
+}
